[gd_scene load_steps=4 format=3 uid="uid://vedp27gym2gf"]

[ext_resource type="Script" path="res://Scripts/SelectorScript.gd" id="1_0t007"]
[ext_resource type="Texture2D" uid="uid://hqvwkvfj7lor" path="res://MenuBg.jpg" id="1_0yqdg"]
[ext_resource type="FontFile" uid="uid://bty3v4xfd841k" path="res://04b_30/04B_30__.TTF" id="2_lwojq"]

[node name="DiffScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0t007")

[node name="MenuBg" type="Sprite2D" parent="."]
position = Vector2(630, 361)
scale = Vector2(0.998888, 1.00204)
texture = ExtResource("1_0yqdg")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 188.0
offset_right = 1171.0
offset_bottom = 314.0
theme_override_fonts/font = ExtResource("2_lwojq")
theme_override_font_sizes/font_size = 120
text = "Cards Game"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 357.0
offset_right = 856.0
offset_bottom = 572.0

[node name="EasyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.0980392, 0.121569, 0.729412, 1)
theme_override_colors/font_hover_color = Color(0.0941176, 0.588235, 0.960784, 1)
theme_override_fonts/font = ExtResource("2_lwojq")
theme_override_font_sizes/font_size = 60
text = "Facil"

[node name="NormalButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.0980392, 0.121569, 0.729412, 1)
theme_override_colors/font_hover_color = Color(0.0941176, 0.588235, 0.960784, 1)
theme_override_fonts/font = ExtResource("2_lwojq")
theme_override_font_sizes/font_size = 60
text = "Normal"

[node name="HardButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.0980392, 0.121569, 0.729412, 1)
theme_override_colors/font_hover_color = Color(0.0941176, 0.588235, 0.960784, 1)
theme_override_fonts/font = ExtResource("2_lwojq")
theme_override_font_sizes/font_size = 60
text = "\"Dificil\""

[connection signal="pressed" from="VBoxContainer/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/NormalButton" to="." method="_on_NormalButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HardButton" to="." method="_on_HardButton_pressed"]
